# summer-stem

backend/: pyproject.toml
backend/Game/: db.sqlite3
backend/Game/Game/: settings.py  urls.py
backend/Game/accounts/: urls.py
backend/Game/product/: models.py  serializers.py  urls.py  views.py
backend/Game/product/migrations/: 0001_initial.py
backend/Game/userData/: models.py  serializers.py  urls.py  views.py
backend/Game/userData/migrations/: 0001_initial.py  0002_alter_userinfo_options_and_more.py  0003_userinfo_slug.py  0004_userinfo_amount_object.py  0005_alter_userinfo_options_remove_userinfo_amount_object_and_more.py  0006_objectinfo_alter_userinfo_options_delete_object_info_and_more.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css
frontend/src/assets/scss/: _mixins.scss  _variables.scss  base.scss
frontend/src/components/: Handle.vue  Items.vue  Market.vue  MoneyCounter.vue  StockList.vue  StockViewer.vue  UserInfo.vue  UserSettings.vue
frontend/src/stores/: user.js
frontend/src/views/: HomeView.vue  LoginView.vue  SignupView.vue
