[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
django-rest-framework = "^0.1.0"
firebase-admin = "^5.2.0"
Pillow = "^9.2.0"
django-cors-headers = "^3.13.0"
djoser = "^2.1.0"
Markdown = "^3.3.7"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
